# SoftwareEngineering

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  datei.txt
cmake/: CocktailPro.cmake  CocktailProCppCheck.cmake  CocktailProDoxygen.cmake  CocktailProResource.cmake  CocktailProSource.cmake  CocktailProTest.cmake  Flags.cmake
model/: SE_CocktailProLegacy.mdzip  SWE_Leer.mdzip
model/SE_CocktailProLegacy/: BINARY-08f4e3dc-8fb9-42c6-a500-62353ec0e1e7  BINARY-a31865b6-fd6b-4cb5-8ac5-eea0b85ee965  Binaries.properties  Records.properties  com.nomagic.ci.metamodel.project  com.nomagic.ci.persistence.local.proxy.privatedependencylist  com.nomagic.ci.proxy.snapshot.descriptor.descriptors  com.nomagic.magicdraw.ce.commoncodeengineering  com.nomagic.magicdraw.core.project.options.commonprojectoptions  personal-Binaries.properties  personal-com.nomagic.magicdraw.ce.personalcodeengineering  personal-com.nomagic.magicdraw.core.project.options.personalprojectoptions  proxy.local__PROJECT$h58814ab339137157c8adba26ca27a87_resource_com$dnomagic$dmagicdraw$duml_umodel$dshared_umodel$dsnapshot  proxy.local__PROJECT$h5979fd8d$h49bb$h48a4$h970f$ha242a2dbb747_resource_com$dnomagic$dmagicdraw$duml_umodel$dmodel$dsnapshot  proxy.local__PROJECT$h877558e9224f114d50dea1f39a1c119_resource_com$dnomagic$dmagicdraw$duml_umodel$dshared_umodel$dsnapshot
model/SWE_Leer/: Binaries.properties  Records.properties  com.nomagic.ci.metamodel.project  com.nomagic.ci.persistence.local.proxy.privatedependencylist  com.nomagic.ci.proxy.snapshot.descriptor.descriptors  com.nomagic.magicdraw.ce.commoncodeengineering  com.nomagic.magicdraw.core.project.options.commonprojectoptions  personal-com.nomagic.magicdraw.ce.personalcodeengineering  personal-com.nomagic.magicdraw.core.project.options.personalprojectoptions  proxy.local__PROJECT$h58814ab339137157c8adba26ca27a87_resource_com$dnomagic$dci$dmetamodel$dproject$dsnapshot  proxy.local__PROJECT$h58814ab339137157c8adba26ca27a87_resource_com$dnomagic$dmagicdraw$duml_umodel$dshared_umodel$dsnapshot  proxy.local__PROJECT$h5979fd8d$h49bb$h48a4$h970f$ha242a2dbb747_resource_com$dnomagic$dmagicdraw$duml_umodel$dmodel$dsnapshot  proxy.local__PROJECT$h877558e9224f114d50dea1f39a1c119_resource_com$dnomagic$dmagicdraw$duml_umodel$dshared_umodel$dsnapshot
requirements/: User_Stories_und_Schaetzungen.xlsx
src/main/: AvailableIngredients.cpp  AvailableIngredients.h  BarTender.cpp  BarTender.h  CocktailPro.cpp  CocktailPro.h  CppCheck-Fixes.txt  DeviceVerwalter.cpp  DeviceVerwalter.h  Dispenser.cpp  Dispenser.h  Drainer.cpp  Drainer.h  GNUCheck-Fixes.txt  InternalDevice.cpp  InternalDevice.h  Main.cpp  Masher.cpp  Masher.h  MixableRecipeBook.cpp  MixableRecipeBook.h  Mixer.cpp  Mixer.h  Observer.h  Recipe.cpp  Recipe.h  RecipeBook.cpp  RecipeBook.h  RecipeStep.cpp  RecipeStep.h  Shaker.cpp  Shaker.h  Subject.cpp  Subject.h  Timer.cpp  Timer.h  Waage.cpp  Waage.h
src/resources/: Rezepte.csv
src/test/: AvailableIngredients_Test.cpp  BarTender_Test.cpp  CocktailPro_Test.cpp  DeviceVerwalter_Test.cpp  Dispenser_Test.cpp  Drainer_Test.cpp  InternalDevice_Test.cpp  Main.cpp  Masher_Test.cpp  MixableRecipeBook_Test.cpp  Mixer_Test.cpp  RecipeBook_Test.cpp  RecipeStep_Test.cpp  Recipe_Test.cpp  Shaker_Test.cpp  Subject_Test.cpp  Timer_Test.cpp  UserStory1.cpp  UserStory2.cpp  UserStory3.cpp  UserStory4.cpp  UserStory5_test.cpp  Waage_Test.cpp
